Fixed bottom margin on small image placeholders in list

--- a/client/shifty.css
+++ b/client/shifty.css
@@ -71,6 +71,7 @@ i[data-delete-shiftdef-id] {
 	height: 70px;
 	background-size: contain;
 	border: 1px solid silver;
+	margin-bottom: 0;
 }
 .photo-placeholder.empty {
 	border: 2px dashed silver;
